src/regression_tests/snapshots/nixfmt_rs__regression_tests__ir__assignment_rhs_application_grouping.snap
---
source: src/regression_tests/ir.rs
description: "{ x = f { }; }"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m{[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mx[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m=[0m[0;97;1m"[0m
        [0;93;1m,[0m Group RegularG
            [0;35m[[0m Spacing Space
            [0;35m,[0m Group Transparent
                [0;36m[[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mf[0m[0;97;1m"[0m [0;36m][0m
            [0;35m,[0m Spacing Space
            [0;35m,[0m Group RegularG
                [0;36m[[0m Text [0;92;1m4[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m{[0m[0;97;1m"[0m
                [0;36m,[0m Spacing Hardspace
                [0;36m,[0m Text [0;92;1m4[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m}[0m[0;97;1m"[0m
                [0;36m][0m
            [0;35m][0m
        [0;93;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
        [0;93;1m][0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m}[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
